# mini-zk

./: README.md  pyproject.toml
src/mini_zk/: __main__.py  config.py  messages.py  note_utils.py
